--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@recogito/recogito-js",
+  "name": "recogito-js-fork",
   "version": "1.2.3",
-  "description": "A JavaScript library for text annotation",
+  "description": "A JavaScript library for text annotation / Fork by @apeli",
   "main": "dist/recogito.min.js",
   "scripts": {
     "start": "webpack serve --open --mode=development",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/recogito/recogito-js.git"
+    "url": "git+https://github.com/Apeli/recogito-js.git"
   },
   "keywords": [
     "RecogitoJS",
