--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/recogito.min.js",
   "scripts": {
     "start": "webpack serve --open --mode=development",
-    "build": "webpack --mode=production",
+    "build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
